@@ -6,7 +6,11 @@ DIST gitlab-ci-multi-runner-1.3.2-x86 56049864 SHA256 f76eb70b7033f0db62022136e5
 DIST gitlab-ci-multi-runner-1.4.1-amd64 59770288 SHA256 8efbffac459fab6bc0532ba09d527e5a93d1da521fd90b1ff6408a714fcc8261 SHA512 33d8a509def74caa937fbfb69dc4aae50266e1ffd83bcddd2e358649010602108bc99647192fd64e8bbd1892a18f27b69b704ea1b4fc6622ec0d8ee4fdd564c0 WHIRLPOOL 6fae8f2a04aa3a74506746906e91300e05ea3ca31cdf8a4fc8e092328277975832f80a56eee1e26359dd510ed135fd756fd11b3ad75e23284c92388c162f388a
 DIST gitlab-ci-multi-runner-1.4.1-arm 56437360 SHA256 8f029a87d1ac1e1fc0f53249e8c8d9fc8f8c5191609a74521fdf626d6a9aec1e SHA512 9fbb8fd89a25e7f51354ec5d55bc4e1a60a166c39849ea4fa54435dbc48135ac8720a6f0cea2645fb449ceff5e74cfb402f33bb6aa75189eeeceb7a60abfba29 WHIRLPOOL 764c516580dec2bddfbcd270c4234f164256ab5801608875a9edbe59852e679c7f285a7ef09748662900add74fde6ebeeb2842e34cb208cd5858eed6dc60b1ec
 DIST gitlab-ci-multi-runner-1.4.1-x86 56606472 SHA256 c4c1d15912a48a6de66a0093ad3db7a50e7c28c64dc250a328de3a120fa36baf SHA512 f394834d78cf743fa80d219b92e071a450f055d2eca38486f5b9aecf85e3daba10e370a14ac9bdb847fcea63b80101f98ed75b9f741944eadd14e0a9f2faa388 WHIRLPOOL 793e873eac8a85de75e4dc54456a21f9c235d5c83a6d19b039c4112f5d145ca373d8c4fc70b9bae9c137bb30fbe5ebaae81b7f03a904d634ede242829c482ba4
+DIST gitlab-ci-multi-runner-1.5.0-amd64 40162568 SHA256 8068a7c0a149cda3782ea58b29ac1f1dfb7018d2021359b2be6094493a86fbf0 SHA512 e06c2aa44d7c369bfa6315221bac19670c97268f64660a320fa9872f86991c1f3c3ef25a9cd233b5769bbf30e1a4958d347f7bbb991dbf10696666332d763314 WHIRLPOOL 4b9e5e06671955245116693d73e5158c0e6a9455127cf6703222a353467c3c57128df0ad682dc47db37b20f98e2a870b5e32344c69c64f301a4611c451305569
+DIST gitlab-ci-multi-runner-1.5.0-arm 36718736 SHA256 38849b5948d892b505f2d8b01b777ed4b22eea2a6ce91aeaf276c3ad6fcb56cd SHA512 14439be83d1f5cb3a2e2b67421138ef4b6ea2ed6636214f082f4db32786a6707c4299c23410ba6c54e06079358acdf84e3a0ee9c5280c17f06576463607187c4 WHIRLPOOL ca677e0d62323021ec477fa031cc1a8cab76757101abe7033c0c1da632f99d225c622792d07df93b935467a7ed987e2cbe6c4dd00e16f06ad3988d4bd21623d2
+DIST gitlab-ci-multi-runner-1.5.0-x86 36892864 SHA256 029e1a570ff5f5f570d107cb451b2a759829ba64fde6965a1d4abc6135ef63be SHA512 06d55f40e3d43ef3524266fec1c009372bb18850394ec5688979fe6bf33e3bf864aa0582ff0de5eb1e088ce2a24b09bdb6a2772643a15f4d8e994c7f194197a9 WHIRLPOOL 8ede1609492f33599078129a44c28eb58f850da715d091b847a753589a68cfac9f206f9c5e7b78eddad67a834279fbd4cd72a7fb5ea09075aa16729f70edeff2
 EBUILD gitlab-ci-multi-runner-1.3.2.ebuild 2349 SHA256 29cac383ea3d01f2c5edc10698d5c49870e6d82eb05dc035610df7028ba5ebc9 SHA512 ebe3807eba35b313a64baf16121cc1794bda640a4f5e979c5898c33f4d02e756832fe1a052e500bc7257dfdd16faa43de5abe69062572064360689add0f3ad76 WHIRLPOOL 2674e052ed40f61530c34c396fc35fe9aa555f6f825abc3ac20b89f0d0090234e198bce69c5d1580c25401888b000b5e9c47c4ae6c0f3f02d8d2654f3a8ecd89
 EBUILD gitlab-ci-multi-runner-1.4.1.ebuild 2342 SHA256 f33ce8f464292cbdf84362d51309082dc92cf2a2b9941be5706fbff881cab321 SHA512 a647a90f50e8337233b0642a04b26e81558cebad999ef209df9d5b6ad7900893e025e3e472c8d3221e63858f5ee6c7ba77faf32346baf5cb3833795e6648cd4c WHIRLPOOL 6179938277f66df49b316293fedb830a7f2e87c57786bae8cd8e6b301a89dd6343dc367cd702b462b4fdf8dcf9bdb6c116b788033c87ce366045fc876eee79e3
-MISC ChangeLog 891 SHA256 96ef46ae5199d64dce40df1c4fd11b3f0bc363adba9654fb5ac65c60cf7d4e8c SHA512 64ef58b086b4355622b1d3904bd782a660b6beb63e98da4c192d7841ea0dd505bb2cce9715869311be7263a928959203f232412443b29e7cc2cab8fd13c1e4ec WHIRLPOOL 812774ea0fcded80bfe8b0793b19ffc0730f0dd62496d7a0eb9fbd1bceb182465ce7bba2c1a81471627dbd3d2a66fdf23690279c2ddefa5d2473bd0c4ccc9699
+EBUILD gitlab-ci-multi-runner-1.5.0.ebuild 2342 SHA256 9fbdc394359cacdcec49465bd76629963b4aaab5bc31afe9701c9881034d43d1 SHA512 d7753df674ae31200f373bf7abdfb3fe2364b6540881008b2790b60c9a7096f7a0a3c903fe79788ce12313001a4064d64b2d1a7405785823e8c8cee7165df6ae WHIRLPOOL fae7ad9bf6c08716fb7662af4dc2958814f5e768e4449f141da34f4436cf61270323855e76f627e0b91656ebdfc30a362b80aad65066c1859367c1aab0320a2c
+MISC ChangeLog 1140 SHA256 a2508565c5caeeb0de3a8a3b2414d91f94d69bc2303b0f76e5d18529e19f46d8 SHA512 2cc727fed0d1093b0e4aa6dd290119e5768d63703cddb55070447225266369402bdf25c920154a3652b2a0fa17acabe5b2106f0762826432a5acca47aea0e099 WHIRLPOOL 075e1fc66c3a53e920ba437acbb1f41630e83f79e659b062cfbd7ae2c701e2d1d359ff03b9364bceeb8b9e3d3d283eef111757d83e025986adade60404795b16
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
