@@ -1,3 +1,10 @@
+*gitlab-ci-multi-runner-1.5.0 (22 Aug 2016)
+
+  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
+  +gitlab-ci-multi-runner-1.5.0.ebuild:
+  dev-vcs/gitlab-ci-multi-runner:  added gitlab-ci-multi-runner-1.5.0. to be
+  used along with gitlab-ce-8.11.0
+
 *gitlab-ci-multi-runner-1.4.1 (26 Jul 2016)
 
   26 Jul 2016; Manuel Friedli <manuel@fritteli.ch>
